# resume-generator-bot

./: .gitignore  README.md  env.example  pyproject.toml  run.sh  setup.sh
src/: main.py
src/api/: chat.py
src/models/: chat.py
src/utils/: config.py  llm.py  prompts.py
static/css/: styles.css
static/js/: markdown.js
templates/: index.html
